# jupyterlab-sql-explorer

./: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  conftest.py  install.json  jest.config.js  package.json  pyproject.toml  tsconfig.json
.github/workflows/: build.yml  check-release.yml
jupyter-config/nb-config/: jupyterlab-sql-explorer.json
jupyter-config/server-config/: jupyterlab-sql-explorer.json
jupyterlab-sql-explorer/: __init__.py  db.py  engine.py  handlers.py  task.py
jupyterlab-sql-explorer/tests/: __init__.py  test_handlers.py  test_sqlite.py
jupyterlab_sql_explorer/: __init__.py  comments.py  comments_db.py  const.py  db.py  engine.py  handlers.py
jupyterlab_sql_explorer/tests/: test_comments.py  test_handlers.py  test_sqlite.py  test_utils.py
schema/: plugin.json
src/: JpServices.ts  QueryWidget.tsx  SqlWidget.tsx  cmd_menu.ts  handler.ts  icons.ts  index.ts  interfaces.ts  model.ts  react-window.d.ts  resize-observer.d.ts  svg.d.ts
src/DataGridExtensions/: events.ts  fontWidth.ts  selectionManager.ts
src/__tests__/: jupyterlab-sql-explorer.spec.ts  model.spec.ts
src/auto_resizer/: AutoSizer.ts  index.ts  types.ts
src/components/: ActionBtn.tsx  ResultsTable.ts  SingletonPanel.ts  Table.ts  ask_pass.tsx  collist.tsx  dblist.tsx  loading.tsx  new_conn.tsx  sqlPanel.tsx  styles.ts
src/components/dataGridExtensions/: columnWidth.ts
src/sqlConsole/: ResultsTable.ts  Table.ts  console.ts  editor.ts  index.ts  sqlConsole.tsx  toolbar.tsx
style/: base.css
ui-tests/: package.json
ui-tests/tests/: jupyterlab-sql-explorer.spec.ts
